fixed subtle bug in raffle

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,7 @@ project(median_poc)
 set(CMAKE_CXX_STANDARD 20)
 include_directories(.)
 include_directories(Aleph-w)
+link_directories(Aleph-w)
 
 add_executable(reservoir_sampling reservoir_sampling.cc)
-target_link_libraries(reservoir_sampling PRIVATE gsl)
+target_link_libraries(reservoir_sampling PRIVATE Aleph gsl)
